# AutoScholar

./: .env.example  .gitignore  DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run.py
.qoder/quests/: article-analysis-report-generation.md
app/: __init__.py  main.py
app/api/: routes.py
app/core/: __init__.py  config.py  database.py  logging.py
app/models/: __init__.py  paper.py  report.py  task.py
app/schemas/: schemas.py
app/services/: crawler.py  document_generator.py  llm_service.py  orchestrator.py
app/utils/: datetime_utils.py  retry.py
scripts/: example_usage.sh
tests/: conftest.py
tests/unit/: test_config.py
